fix yocto build: update sysroot only if it was not set already

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,9 @@ set (MODBUS_INC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set (CFLAGS ${CMAKE_C_FLAGS})
 set (LDFLAGS ${CMAKE_EXE_LINKER_FLAGS})
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm|ARM")
-   set (CFLAGS "${CFLAGS} --sysroot=${CMAKE_SYSROOT}")
+   if(NOT ${CFLAGS} MATCHES "--sysroot=")
+      set (CFLAGS "${CFLAGS} --sysroot=${CMAKE_SYSROOT}")
+   endif ()
 endif()
 
 set (CONFIGURE ./configure CFLAGS=${CFLAGS} LDFLAGS=${LDFLAGS} --prefix=${BUILD_DIR}  --enable-static --disable-shared --disable-tests)
